<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal">

    <!-- Song Name on Top -->
    <TextView
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:id="@+id/playTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:id="@+id/playArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <!-- Song Image -->
    <ImageView
        android:id="@+id/playImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Track Line (SeekBar) -->
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <!-- Controls Row -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        >

        <!-- Previous Button -->
        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_skip_next_24"
            android:layout_margin="20dp"
            android:contentDescription="@string/play_previous"
            />

        <!-- Play/Pause Button -->
        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/baseline_play_arrow_24"
            android:layout_margin="15dp"
            android:contentDescription="@string/play_pause" />


        <!-- Next Button -->
        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_skip_next_24"
            android:layout_margin="20dp"
            android:contentDescription="@string/play_next"
            />

    </LinearLayout>

</LinearLayout>
