<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/songImage"
        android:layout_width="73dp"
        android:layout_height="68dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/song_icon"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/android_music_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/song_name"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/artist_name"
            android:textSize="15sp"
            android:textStyle="normal">

        </TextView>

    </LinearLayout>

</LinearLayout>
